# ai-kb-assistant

./: .env.example  .env.tg_bot.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: README.md
.codex/prompts/: README.md  answer-questions.md  day-start.md  end-day.md  log-notes.md  meeting-protocol.md  show-todos.md
.codex/skills/: README.md
.mcp/: README.md
configs/: README.md  kb.toml
notes/: README.md
notes/ideas/: README.md
notes/meetings/: README.md
notes/personal/: README.md
notes/rostock/: README.md
notes/technical/: README.md
notes/work/: README.md  jira.md  open-questions.md  reminders.md  time-buckets.md  todos.md  typos.md
orchestrator/: README.md
scripts/: README.md  kb.py  mcp_speech2text.py  mcp_telegram_followups.py  mcp_telegram_send.py  speech2text.py  tmux_tools.py
templates/: README.md  bug-investigation.md  meeting-notes.md  weekly-time-report-template.md
templates/jira/: task-template.md
tg_bot/: README.md  __init__.py  app.py  codex_runner.py  collect_payload.py  config.py  keyboards.py  mattermost_watch.py  queue_admin.py  router.py  scheduler.py  spool_admin.py  state.py  telegram_api.py  tmux_tools.py  ui_labels.py  watch.py  workspaces.py
tg_bot/examples/: env.example  systemd.service  telegram-bot-api.env.example  telegram-bot-api.service
tg_bot/tests/: __init__.py  test_admin_ui.py  test_app_forum_topic_created.py  test_app_forum_topic_edited.py  test_app_pending_attachments.py  test_app_restart_spool.py  test_codex_runner_cmd.py  test_collect_payload.py  test_config_parsing.py  test_followups.py  test_mattermost_batching.py  test_queue_admin.py  (+40 more)
(+21 files in other folders)
